tests/error/function_ret_ref_prim.gw
// [contains] cannot declare references (@) of primitive type
 function int@ test(){}
